# inverse-canopy

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  .space.kts  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.py
.teamcity/: pom.xml  settings.kts
inverse_canopy/: __init__.py  __main__.py  conditional_events.py  conversions.py  early_stop.py  end_states.py  inverse_canopy.py  lognormal_utils.py  metrics.py  params.py  plot.py
inverse_canopy/canopy/: dag.py  event.py  graph.py  parser.py
inverse_canopy/canopy/ops/: bitwise.py  sampler.py  tree_sampler.py
notebooks/: demo.ipynb  demo_uncertain.ipynb
scripts/: LCDL_simplified.ipynb
tests/: gpu_run.py  test_base_case.py  test_conversions.py  test_parameters_set_correctly.py  test_simple_run.py
tests/conversions/: test_compute_mu_sigma.py
tests/early_stop/: test_bestparams_earlystop.py  test_core_earlystop.py  test_init_earlystop.py  test_patience_earlystop.py  test_reset_earlystop.py  test_typesafety_earlystop.py
tests/fixtures/: test_ANTC.py
tests/fixtures/EBR-II/: ANTC.ipynb  EVTR.ipynb  LCDL.ipynb  LF1A.ipynb  LF1B.ipynb  LF1C.ipynb  LF1D.ipynb  LF2A - 2.ipynb  LF2A.ipynb  LF2B - 2.ipynb  LF2B.ipynb  LF2C - 2.ipynb  LF2C.ipynb  LF2D.ipynb  LF2E - 2.ipynb  LF2E.ipynb  LF2F - 2.ipynb  LF2F.ipynb  LOCP.ipynb  LONP.ipynb  MDLF.ipynb  MELF.ipynb  OCPP.ipynb  OCSL.ipynb  OCSP.ipynb  OELF.ipynb  RIFL.ipynb  RIFS - 2.ipynb  RIFS.ipynb  RISA.ipynb  RISB.ipynb  RISC - 2.ipynb  RISC.ipynb  RISD - 2.ipynb  RISD.ipynb  SCRM.ipynb  SDFR.ipynb  SFLE.ipynb  SFPB.ipynb  SHDL.ipynb  (+10 more)
tests/fixtures/synthetic-openpsa/: ft-openpsa-10000Gates.xml  ft-openpsa-1000Gates.xml  ft-openpsa-100Gates.xml  ft-openpsa-11000Gates.xml  ft-openpsa-11Gates.xml  ft-openpsa-12000Gates.xml  ft-openpsa-13000Gates.xml  ft-openpsa-14000Gates.xml  ft-openpsa-1Gates.xml  ft-openpsa-2000Gates.xml  ft-openpsa-200Gates.xml  ft-openpsa-21Gates.xml  (+21 more)
(+6 files in other folders)
